fixed uncachable union (bug #150)

mysql-test/r/union.result:
  sect of uncachable union
mysql-test/t/union.test:
  sect of uncachable union
sql/sql_lex.h:
  fixed uncachable union